/*
 * $Id: ChangeLog,v 1.163 2006-06-03 18:17:32 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-06-03 00:00 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    * Reverted fix "TAB" next-control movement for Internal windows.
      This locks system when working with RADIO controls :(

2006-06-02 07:41 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/miniprint.prg
    * work around closing preview, because new changes.

2006-06-01 21:03 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/oohg.h
  * source/c_controlmisc.c
  * source/h_controlmisc.prg
  * source/h_windows.prg
  * source/h_scroll.prg
    * Fixed "TAB" next-control movement for Internal windows.
    * ::HScrollBar and ::VScrollBar properties added for
      TForm. These controls manages scrollbar's movement in
      forms.
    + Added GetScrollRangeMin() function.
    * Moved ::Events_VScroll() and ::Events_HScroll() methods
      to TWindow.
    * Fixed scroll's skip for PAGE skip.

/* Al darle click en el scrollbar de un FORM, se mueve una pantalla entera */

    * WM_HSCROLL and WM_VSCROLL event handling moved to TWindow.
    * ::ContainerRow, ::ContainerCol and ::ContainerhWnd methods
      now in TForm.
    * ::VirtualWidth and ::VirtualHeight properties can be
      changed in runtime.
    * _OOHG_SelectSubClass() function.
  * source/c_windows.c
    * Fixed ::Row, ::Col, ::Width, ::Height return value when
      window is not defined.
  * include/i_tab.ch
  - source/c_tab.c
  * source/h_tab.prg
  * source/makelib.bat
    * Moved source code from c_tab.c to h_tab.prg .
    - c_tab.c removed.
    * RTL and SUBCLASS clauses for TAB.
    * NAME, OBJ and SUBCLASS clauses added to TABPAGE.
    * INTERNALS clause for TAB. tab pages can be INTERNAL windows.
